Closed Bug 811815 Opened 12 years ago Closed 12 years ago

[Browser] A href links are not underlined/showing as links in Browser

Categories

(Firefox OS Graveyard :: General, defect, P1)

ARM
Gonk (Firefox OS)
defect

Tracking

(blocking-basecamp:+, firefox18 fixed, firefox19 fixed)

RESOLVED FIXED
blocking-basecamp +
Tracking Status
firefox18 --- fixed
firefox19 --- fixed

People

(Reporter: nhirata, Assigned: dougt)

References

Details

(Keywords: otoro, regression, unagi)

Attachments

(2 files)

Attached image screenshot
## Environment :
Unagi phone, build 20121114
  
## Repro :
1. launch browser
2. go to http://people.mozilla.com/~nhirata/html_tp/AndroidLinks.html

## Expected :
1. A href links have an underline/color so it's easy to determine it's a link

## Actual :
1. it looks solid black.  Hard to tell they are links

## Note :
1. usability issue + I think this is a regression?
Component: Gaia::Browser → General
This looks like a platform issue... I don't *think* this can be effected by a CSS issue in the browser app itself?
blocking-basecamp: ? → +
Assignee: nobody → doug.turner
Definitely a regression also - I know this was working before.
Keywords: regression
OS: Android → Gonk (Firefox OS)
This was most likely caused by bug 799609.  Please see comment #4 where gal says that this is a v2 feature.  renom'ing for further consideration.
blocking-basecamp: + → ?
(In reply to Doug Turner (:dougt) from comment #5)
> This was most likely caused by bug 799609.  Please see comment #4 where gal
> says that this is a v2 feature.  renom'ing for further consideration.

Uhh...how is this a v2 feature when this was working before?
> This was most likely caused by bug 799609.

"Link coloring" refers to coloring visited links purple.

I don't think bug 799609 is involved here.  Or, if it is, this is an entirely unexpected result, from at least my perspective.
Again, this is an obvious blocker.  You do not have to look hard to find webpages which are rendered unusable by this bug.
(In reply to Justin Lebar [:jlebar] from comment #8)
> Again, this is an obvious blocker.  You do not have to look hard to find
> webpages which are rendered unusable by this bug.

+1
so, this is about the links not being underlined (colorization is going to be busted for v.1)
blocking-basecamp: ? → +
(In reply to Doug Turner (:dougt) from comment #10)
> so, this is about the links not being underlined (colorization is going to
> be busted for v.1)

The links should be underlined and blue, without places.  They're currently not underlined and black.

With places, a link should be underlined and blue or purple, depending on whether it has been visited.  Getting specifically this color-changing behavior is what we punted on.
> I don't think bug 799609 is involved here.

fwiw, Enabling places fixes the problem.  Patching coming up to fix the default state/color of links.
Attached patch patch v.1Splinter Review
i am not sure this is entirely correct.

To avoid risk, maybe we may want to just set self->mLinkState to eLinkState_Unvisited when mHistory is null.

Thoughts?
Attachment #686236 - Flags: review?(justin.lebar+bug)
> To avoid risk, maybe we may want to just set self->mLinkState to eLinkState_Unvisited 
> when mHistory is null.

Yeah, that seems safer, in terms of landing on Beta.

Also, I'm not familiar with this code; I'd prefer if bz reviewed.
Attachment #686236 - Flags: review?(justin.lebar+bug) → review?(bzbarsky)
Comment on attachment 686236 [details] [diff] [review]
patch v.1

r=me.  This definitely makes sense: we're in Unknown, we know we have an href, so we have nothing to lose by going into Unvisited.
Attachment #686236 - Flags: review?(bzbarsky) → review+
Setting priority based on triage discussions.  Feel free to decrease priority if you disagree.
Priority: -- → P1
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
This hasn't landed on m-c yet.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
https://hg.mozilla.org/mozilla-central/rev/7bb68db8ab5f
Status: REOPENED → RESOLVED
Closed: 12 years ago12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: