Bug 811815 - A href links are not underlined/showing as links in Browser. r=jlebar a=blocking-basecamp